Byttet iframe-resizer-bibliotek
iframe-resizer-react er nå en del av iframe-resizer-pakken.

Vi bruker den til å pakke inn pasientstrøm-siden.

--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -22,6 +22,7 @@
     "start-server": "npx serve out/"
   },
   "dependencies": {
+    "@iframe-resizer/react": "5.1.2",
     "@mui/icons-material": "5.15.19",
     "@mui/material": "5.15.19",
     "@sentry/browser": "8.9.1",
@@ -43,7 +44,6 @@
     "decap-cms-app": "3.1.10",
     "decap-cms-core": "3.3.6",
     "gray-matter": "4.0.3",
-    "iframe-resizer-react": "1.1.0",
     "lodash": "4.17.21",
     "next": "14.2.4",
     "next-query-params": "5.0.0",
