--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "15.2.7",
     "prettier": "3.3.2",
     "turbo": "1.13.4",
-    "typescript": "5.5.2"
+    "typescript": "5.5.2",
+    "typescript-eslint": "7.14.1"
   }
 }
