--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -65,6 +65,7 @@
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
     "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-v8": "1.6.0",
     "cypress": "13.12.0",
     "eslint": "9.5.0",
     "husky": "9.0.11",
