--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.3.3",
     "@types/react-select": "5.0.1",
     "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-v8": "1.6.0",
     "eslint": "9.5.0",
     "jsdom": "24.1.0",
     "next-router-mock": "0.9.13",
