--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -13,7 +13,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.1.0",
+    "@testing-library/dom": "10.1.0",
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
     "@types/d3": "7.4.3",
@@ -43,8 +43,8 @@
     "@visx/event": "3.3.0",
     "@visx/grid": "3.5.0",
     "@visx/group": "3.3.0",
-    "@visx/heatmap": "^3.3.0",
-    "@visx/legend": "^3.10.3",
+    "@visx/heatmap": "3.3.0",
+    "@visx/legend": "3.10.3",
     "@visx/responsive": "3.10.2",
     "@visx/scale": "3.5.0",
     "@visx/shape": "3.5.0",
