--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -26,6 +26,7 @@
     "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "5.15.20",
     "@mui/material": "5.15.20",
+    "@mui/x-charts": "7.11.0",
     "@sentry/browser": "8.11.0",
     "@sentry/react": "8.11.0",
     "@tanstack/react-query": "5.45.1",
