--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "@iframe-resizer/react": "5.2.3",
     "@mui/base": "5.0.0-beta.40",
-    "@mui/icons-material": "5.16.6",
-    "@mui/material": "5.16.6",
-    "@sentry/browser": "8.24.0",
-    "@sentry/react": "8.24.0",
-    "@tanstack/react-query": "5.51.21",
-    "@tanstack/react-query-devtools": "5.51.21",
+    "@mui/icons-material": "5.15.20",
+    "@mui/material": "5.15.20",
+    "@mui/x-charts": "7.11.0",
+    "@sentry/browser": "8.11.0",
+    "@sentry/react": "8.11.0",
+    "@tanstack/react-query": "5.45.1",
+    "@tanstack/react-query-devtools": "5.45.1",
     "@visx/axis": "3.10.1",
     "@visx/group": "3.3.0",
     "@visx/scale": "3.5.0",
