--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -13,7 +13,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.1.0",
+    "@testing-library/dom": "10.2.0",
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
     "@types/d3": "7.4.3",
@@ -22,10 +22,10 @@
     "@types/react-select": "5.0.1",
     "@vitejs/plugin-react": "4.3.1",
     "@vitest/coverage-v8": "1.6.0",
-    "eslint": "9.5.0",
-    "jsdom": "24.1.0",
+    "eslint": "9.8.0",
+    "jsdom": "24.1.1",
     "next-router-mock": "0.9.13",
-    "prettier": "3.3.2",
+    "prettier": "3.3.3",
     "react-markdown": "9.0.1",
     "react-scripts": "5.0.1",
     "remark-gfm": "4.0.0",
@@ -34,17 +34,17 @@
     "vitest": "1.6.0"
   },
   "dependencies": {
-    "@mui/icons-material": "5.15.20",
-    "@mui/material": "5.15.20",
-    "@mui/x-tree-view": "7.7.1",
-    "@tanstack/react-query": "5.45.1",
+    "@mui/icons-material": "5.15.21",
+    "@mui/material": "5.15.21",
+    "@mui/x-tree-view": "7.8.0",
+    "@tanstack/react-query": "5.51.21",
     "@visx/axis": "3.10.1",
     "@visx/curve": "3.3.0",
     "@visx/event": "3.3.0",
     "@visx/grid": "3.5.0",
     "@visx/group": "3.3.0",
-    "@visx/heatmap": "^3.3.0",
-    "@visx/legend": "^3.10.3",
+    "@visx/heatmap": "3.3.0",
+    "@visx/legend": "3.10.3",
     "@visx/responsive": "3.10.2",
     "@visx/scale": "3.5.0",
     "@visx/shape": "3.5.0",
@@ -52,7 +52,7 @@
     "@visx/vendor": "3.5.0",
     "d3": "7.9.0",
     "d3-format": "3.1.0",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
