--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -52,13 +52,13 @@
     "@visx/vendor": "3.5.0",
     "d3": "7.9.0",
     "d3-format": "3.1.0",
+    "lodash": "4.17.21",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
     "react-select": "5.8.0",
     "resize-observer-polyfill": "1.5.1",
-    "use-query-params": "2.2.1",
-    "lodash": "4.17.21"
+    "use-query-params": "2.2.1"
   }
 }
